=== Version 0.6.7
* Enhancements
  * Updated to use watir-webdriver 0.5.7
* Fixes
  * Improved logic around selecting options from select lists

=== Version 0.6.6 / 2012-4-26
* Enhancements
  * Added ability to find span's by title
  * Changed order of initialization so initialize_page is called after goto
  * Updated to use watir-webdriver 0.5.5
  * Updated to use selenium-webdriver 2.21.2
* Fixes
  * Fixed the problem with determining the existance of an Selenium element

=== Version 0.6.5 / 2012-4-12
* Enhancements
  * Added a page level element method to return a generic Element object
  * Added a method to retrieve all file fields on a page
  * Updated all accessor methods to take a default identifier of {:index => 0}
  * Updated all page level element locators to take a default identifier of {:index => 0}
  * Updated all page level multi-element locators to take a default identifier of {}
  * Updated deprecation warning to print to stderr (Thanks Josh Adell)
  * Updated to use selenium-webdriver 2.21.0

=== Version 0.6.4 / 2012-3-27
* Enhancements
  * Added support for finding the following elements by :css
	Button
	Link
  * Added support for the label element (Thanks Paul Clewell)
  * Added method to fetch generic element (Thanks Jim Holmes)
  * Added direct_url alias for page_url
  * Added visit alias for visit_page
  * Added on alias for on_page
  * Added element_with_focus method to return the element that has focus
  * Changed Elements.element_class_for so parameters can be strings or symbols
  * Changed page_url to accept a symbol that will cause it to call a corresponding method
  * Updated to use watir-webdriver 0.5.4

=== Version 0.6.3 / 2012-3-1
* Enhancements
  * Added #expected_title method to PageObject
  * Added #expected_element method to PageObject
  * Added #execute_script method to PageObject
  * Updated to use selenium-webdriver 2.20.0
* Fixes
  * Udates to the README - Thanks to p0deje and ivaravko