@@ -1,5 +1,6 @@
 === Version 0.6.7
 * Enhancements
+  * Added flash method to Element to temporarily change the background color
   * Updated to use watir-webdriver 0.5.7
 * Fixes
   * Improved logic around selecting options from select lists
